# flask-container-template

./: .dockerignore  .env  .gitignore  Dockerfile  autoapp.py  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  secrets.env.example.env  uwsgi.ini
application/: app.py  celery_app.py  extensions.py  settings.py
application/public/: views.py
application/tasks/: example.py
nginx/: Dockerfile
nginx/conf.d/: default.conf
requirements/: dev.txt  prod.txt
