[tool.poetry]
name = "flask-container-template"
version = "0.1.0"
description = ""
authors = ["Dan Savilonis <djs-github@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
redis = "4.4.4"
celery = "4.4.0"
kombu = "4.6.7"
flower = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^4.3.21"
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"